--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   intl: ^0.17.0
   connectivity_plus: ^2.3.0
   flutter_share: ^2.0.0
+  after_layout: ^1.2.0
 
 dev_dependencies:
   flutter_test:
